# diablo4-gear-affixes

./: .gitattributes  CMakeLists.txt  README.md  pyproject.toml  vcpkg.json
src/: convert_data.py  extract_data.py
